# poker-6--helper

./: .gitignore  README.md  pyproject.toml  shortdeck-cli.spec
.github/workflows/: build-windows.yml
src/shortdeck_cli/: __init__.py  __main__.py  auto_ingest.py  cli.py  evaluator.py  parser.py  pokerstars_capture.py  postflop.py  rules.py
tests/: test_cli.py  test_evaluator.py  test_parser.py  test_pokerstars_capture.py  test_postflop.py  test_strategy_data.py
tmp/: extract_all_scenarios.py  preflop_scenarios.generated.json  utg_hand_actions_generated.json  utg_ocr.json
tmp/all_ocr/: open_co_rfi.json  open_hj_rfi.json  open_mp_rfi.json  open_utg_rfi.json  vs_limp_mp_vs_utg_limp.json
