[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shortdeck-cli"
version = "0.1.0"
description = "Simple test CLI for 6+ Hold'em decision prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
windows-capture = [
	"Pillow>=10.0.0",
	"pytesseract>=0.3.10",
]

[project.scripts]
shortdeck-cli = "shortdeck_cli.cli:cli_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
